# Math

./: CMakeLists.txt  Math.h  Matrix2.h  Matrix3.h  Matrix4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h  constants.c  constants.h  ivec2.h  ivec2_funcs.h  ivec3.h  ivec3_funcs.h  ivec4.h  ivec4_funcs.h  mat2.h  mat2_funcs.h  mat3.h  mat3_funcs.h  mat4.h  mat4_funcs.h  mat4_funcs_sse2.h  mathlib.h  misc_funcs.h  quat.h  quat_funcs.h  types.h  uvec2.h  uvec2_funcs.h  uvec3.h  uvec3_funcs.h  uvec4.h  uvec4_funcs.h  vec2.h  vec2_funcs.h  vec2_template.h  vec3.h  vec3_funcs.h  (+5 more)
